{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 498,
  "lineage": "417bc8c9-ab61-419f-260b-b44d4d87fca3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f654e2477f84bfd",
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-00f654e2477f84bfd",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-16-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.16.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "tags_all": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2457eba250ca23d",
            "arn": "arn:aws:ec2:ap-south-1:139251883673:instance/i-0c5292ed471724180",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5292ed471724180",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0047e72a2149a22c4",
            "private_dns": "ip-10-0-1-217.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-3-110-30-224.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.30.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085095609faec5d4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b1605474d90f282",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aee19a0cd341947d"
            ]
          },
          "dependencies": [
            "aws_key_pair.project-key",
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-sub-1",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:internet-gateway/igw-0ca7803e9a7301f0a",
            "id": "igw-0ca7803e9a7301f0a",
            "owner_id": "139251883673",
            "tags": {
              "Name": "Development-IGW"
            },
            "tags_all": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f654e2477f84bfd",
            "connectivity_type": "public",
            "id": "nat-06003fcffe859f53c",
            "network_interface_id": "eni-0d26f65b2988ffb11",
            "private_ip": "10.0.1.69",
            "public_ip": "35.154.16.131",
            "subnet_id": "subnet-01b1605474d90f282",
            "tags": {
              "Name": "Development-NATGW"
            },
            "tags_all": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-sub-1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0580dcf689a55f5421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06003fcffe859f53c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0580dcf689a55f542",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-sub-1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca7803e9a7301f0a",
            "id": "r-rtb-0d60baf924db2ca561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d60baf924db2ca56",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:route-table/rtb-0580dcf689a55f542",
            "id": "rtb-0580dcf689a55f542",
            "owner_id": "139251883673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Private-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-004705582269af723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:route-table/rtb-0d60baf924db2ca56",
            "id": "rtb-0d60baf924db2ca56",
            "owner_id": "139251883673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-004705582269af723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9d8415485ee728",
            "route_table_id": "rtb-0580dcf689a55f542",
            "subnet_id": "subnet-0fc72fc9593566698"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eb265dd2397dab1",
            "route_table_id": "rtb-0580dcf689a55f542",
            "subnet_id": "subnet-03d4ec376e5986b13"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f76ef65c0954936",
            "route_table_id": "rtb-0580dcf689a55f542",
            "subnet_id": "subnet-02fd2edaedeca2335"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed5ba2522d2008b1",
            "route_table_id": "rtb-0d60baf924db2ca56",
            "subnet_id": "subnet-01b1605474d90f282"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-sub-1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfb8401e22b4da4",
            "route_table_id": "rtb-0d60baf924db2ca56",
            "subnet_id": "subnet-0cd4c060227935afc"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-sub-2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae38b8b11d890999",
            "route_table_id": "rtb-0d60baf924db2ca56",
            "subnet_id": "subnet-0f7e2626403ef73f7"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-sub-3",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:security-group/sg-0aee19a0cd341947d",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aee19a0cd341947d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": "",
            "owner_id": "139251883673",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004705582269af723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-0fc72fc9593566698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc72fc9593566698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-03d4ec376e5986b13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d4ec376e5986b13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-02fd2edaedeca2335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fd2edaedeca2335",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-01b1605474d90f282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b1605474d90f282",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-0cd4c060227935afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd4c060227935afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:subnet/subnet-0f7e2626403ef73f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7e2626403ef73f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139251883673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-3"
            },
            "tags_all": {
              "Name": "public-sub-3"
            },
            "vpc_id": "vpc-004705582269af723"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:139251883673:vpc/vpc-004705582269af723",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094304197b308f726",
            "default_route_table_id": "rtb-0dded0b2000db46af",
            "default_security_group_id": "sg-048db8493d4b4afda",
            "dhcp_options_id": "dopt-052491416eb297e98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004705582269af723",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dded0b2000db46af",
            "owner_id": "139251883673",
            "tags": {
              "Name": "Development-VPC"
            },
            "tags_all": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}